# bo

./: Cargo.toml  README.md
src/: bookmark_manager.rs  config.rs  lib.rs  main.rs  url_config.rs
